<resources>
    <string name="app_name">Stock Pot</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Log In</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Robert Doe</string>
    <string name="nav_header_subtitle">robertdoe60@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_product">Product</string>
    <string name="menu_category">Category</string>
    <string name="menu_transaction">Transaction</string>
    <string name="communicate">Communicate</string>
    <string name="displayDate">Display Date</string>
    <string name="start_date">From</string>
    <string name="end_date">To</string>
    <string name="display_calender">Display Calender</string>
    <string name="profit">Profit</string>
    <string name="set_calender_ranger">Set Range</string>
    <string name="stockstate">Stock State</string>
    <string name="add_product">Add Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="update_product">Update Product</string>
    <string name="view">View Products</string>
    <string name="product_name">Product Name</string>
    <string name="product_detail">Product Detail</string>
    <string name="product_price">Product Price</string>
    <string name="sell_price">Selling Price</string>
    <string name="cost_price">Cost Price</string>
    <string name="threshold">Product Threshold</string>

    <string-array name="array_category">
        <item>Paper</item>
        <item>Oil</item>
        <item>Urea</item>
        <item>0000</item>
    </string-array>
</resources>
