<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llParentSignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#C7602C"
  >

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/llSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_sign_in"
            android:gravity="center"
            android:hint="@string/user_id"
            android:inputType="text"
            android:maxLength="10"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="7dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_sign_in"
            android:gravity="center"
            android:hint="@string/password"
            android:maxLength="8"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:padding="7dp"

           />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/btn_log_in"
        />

</LinearLayout>