<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1ABD4B4B">

    <LinearLayout
        android:id="@+id/llNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <Button
            android:id="@+id/btnCheckProfit"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profit" />

        <Button
            android:id="@+id/btnStockState"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stockstate" />

        <Button
            android:id="@+id/btnSetCalender"
            style="@android:style/Widget.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_calender_ranger" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/svContentOfMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llNavigation"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="411dp">

        <LinearLayout
            android:id="@+id/llContentOfMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llDateText"
                android:layout_width="412dp"
                android:layout_height="64dp"
                android:layout_marginTop="5dp"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/llCalender"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llNavigation"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/txtFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/start_date"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/end_date"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--        <com.google.android.material.button.MaterialButton-->
                <!--           -->
                <!--            />-->

                <ImageButton
                    android:id="@+id/btnShowCalender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/display_calender"
                    android:padding="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_calender_fore"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical|center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llDateText"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="154dp">

                <CalendarView
                    android:id="@+id/cvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--    <Button-->
    <!--        android:id="@+id/btnDisplayDate"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/btn_sign_in"-->
    <!--        android:text="@string/displayDate"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/llCalender"-->
    <!--        app:layout_constraintVertical_bias="0.094" />-->

</androidx.constraintlayout.widget.ConstraintLayout>